removed unused selectors

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </p>
           </div>
           <div class="about-img-container">
-          <img class="about-img1" src="images/free-code-camp.png" alt="about image 1 here"/>
+          <img src="images/free-code-camp.png" alt="about image 1 here"/>
         </div>
         </div>
         <div class="about-container">
@@ -93,8 +93,8 @@
             recusandae itaque adipisci.
           </p>
           </div>
-          <div class="about-img-container" id="real-photo">
-          <img class="img-top" src="images/example-pic2.jpg" alt="about image 2 here" />
+          <div class="about-img-container">
+          <img src="images/example-pic2.jpg" alt="about image 2 here" />
           
           </div>
         </div>
