added introduction html

--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@
           <div class="about-content">
           <h3>Introduction</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
-            nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
-            eaque tempore dignissimos quibusdam quia ea incidunt! Nihil
-            recusandae itaque adipisci.
+            Hi! My name's Adam and I'm 21 years old. I have keen interests in rugby, gaming and more recently web development. I graduated from Cardiff Metropolitean University in the summer of 2022 and in the penultimate term of my final year my curiosity for coding and how the web worked sprung to life.
           </p>
+          <p>In my free time while working as a transport planner I started to teach myself using free resources online such as freeCodeCamp. I was really enjoying it but I could not see a solid career path and how to move forward to get a foothold in the industry.</p>
           </div>
           <div class="about-img-container">
           <img src="images/free-code-camp.png" alt="about image 1 here"/>
@@ -83,6 +81,11 @@
           <div class="about-content">
             <h3>Developer Journey</h3>
           <p>
+            I decided to take the leap. </p>
+            <p>
+              I started applying for coding bootcamps
+              </p>
+            </p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
             nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
             eaque tempore dignissimos quibusdam quia ea incidunt! Nihil
