intro html update

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="about-content">
           <h3>Introduction</h3>
           <p>
-            Hi! My name's Adam and I'm 21 years old. I have keen interests in rugby, gaming and more recently web development. I graduated from Cardiff Metropolitean University in the summer of 2022 and in the penultimate term of my final year my curiosity for coding and how the web worked sprung to life.
+            Hi! My name's Adam and I'm 21 years old. I have keen interests in rugby, gaming and more recently web development. I graduated from Cardiff Metropolitean University in the summer of 2022 and in the penultimate term of my final year my curiosity for coding and how the web works sprung to life.
           </p>
           <p>In my free time while working as a transport planner I started to teach myself using free resources online such as freeCodeCamp. I was really enjoying it but I could not see a solid career path and how to move forward to get a foothold in the industry.</p>
           </div>
