--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             consectetur unde dicta voluptatibus a ipsum?
           </p>
           </div>
-          <div class="project-img-container">
+          <div class="project-img-container project-right">
             
             <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon-container">
@@ -165,7 +165,7 @@
             consequuntur quo fuga earum eos iste qui.
           </p>
         </div>
-          <div class="project-img-container">
+          <div class="project-img-container project-right">
             <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
