slightly changed sizing of project imgs for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="navbar">
         <a href="#welcome">
         <div id="profile-picture-container">
-            <div>
+          <div>
             <img
               id="profile-picture"
               src="images/profilepicture.jpg"
@@ -27,8 +27,8 @@
             <p id="profile-name">
             Adam Young
             </p>
-        </div>
-      </a>
+          </div>
+        </a>
         <ul class="links-container">
           <li><a href="#welcome">Welcome</a></li>
           <li><a href="#about">About</a></li>
@@ -63,8 +63,7 @@
         <div class="about-container">
           <div class="about-content">
             <h3>Developer Journey</h3>
-            <p>The Bootcamp route kept coming up in recommendations to me and after facing another brick wall of 'tutorial hell' I dropped everything and took the leap.
-              </p>
+            <p>The Bootcamp route kept coming up in recommendations to me and after facing another brick wall of 'tutorial hell' I dropped everything and took the leap.</p>
             <p>
             Following my successful application I made on onto IO Academy's Full Stack Track. Not knowing where it may take me but planning to enjoy the journey and keep my head down for the full 16 weeks of the course.
           </p>
