added more content to project paragraphs

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+            obcaecati voluptates reprehenderit doloremque debitis molestias, non
+            suscipit nihil illum aut quibusdam inventore expedita dolore
+            consectetur unde dicta voluptatibus a ipsum?
+          </p>
           </div>
           <div class="project-img-container project-right">
             <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 1" />
@@ -108,6 +114,12 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
             maxime quia odio totam quis vitae facilis assumenda magnam tempora
             officiis ex omnis amet molestiae non, ullam est illo inventore quas!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+            obcaecati voluptates reprehenderit doloremque debitis molestias, non
+            suscipit nihil illum aut quibusdam inventore expedita dolore
+            consectetur unde dicta voluptatibus a ipsum?
           </p>
           </div>
           <div class="project-img-container">
@@ -134,6 +146,12 @@
             perspiciatis cupiditate? Earum, quasi! Reiciendis magnam,
             consequuntur quo fuga earum eos iste qui.
           </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+            obcaecati voluptates reprehenderit doloremque debitis molestias, non
+            suscipit nihil illum aut quibusdam inventore expedita dolore
+            consectetur unde dicta voluptatibus a ipsum?
+          </p>
         </div>
           <div class="project-img-container project-right">
             <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 3" />
@@ -159,6 +177,12 @@
             quae minus ullam sit reiciendis nisi eius asperiores cum ducimus
             tempora neque, deleniti labore mollitia ea rem, dolor, cupiditate
             exercitationem!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+            obcaecati voluptates reprehenderit doloremque debitis molestias, non
+            suscipit nihil illum aut quibusdam inventore expedita dolore
+            consectetur unde dicta voluptatibus a ipsum?
           </p>
           </div>
           <div class="project-img-container">
