changed pictures in about section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p>In my free time while working as a transport planner I started to teach myself using free resources online such as freeCodeCamp. I was really enjoying it but I could not see a solid career path and how to move forward to get a foothold in the industry.</p>
           </div>
           <div class="about-img-container">
-          <img src="images/free-code-camp.png" alt="about image 1 here"/>
+          <img src="images/grad pic.jpeg" alt="about image 1 here"/>
         </div>
         </div>
         <div class="about-container">
@@ -69,7 +69,7 @@
           </p>
           </div>
           <div class="about-img-container">
-          <img src="images/example-pic2.jpg" alt="about image 2 here" />
+          <img src="images/free-code-camp.png" alt="about image 2 here" />
           </div>
         </div>
       </section>
