--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
         <a href="#welcome">
         <div id="profile-picture-container">
           <div>
-            <img
-              id="profile-picture"
-              src="images/profilepicture.jpg"
-              alt="Adam Young"
-            />
+            <img id="profile-picture" src="images/profilepicture.jpg" alt="Adam Young"/>
             </div>
             <p id="profile-name">
             Adam Young
