refactoring html spacing and changed project paragraph font-sizing for desktop

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               &nbsp; &nbsp;
               <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
             </div>
-          </div>
+            </div>
         </div>
         <div id="project2" class="project-container">
           <div class="project-content1">
@@ -130,7 +130,7 @@
               <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
               &nbsp; &nbsp;
               <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-          </div>
+            </div>
           </div>
         </div>
         <div id="project3" class="project-container">
@@ -162,7 +162,7 @@
             <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
             &nbsp; &nbsp;
             <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-          </div>
+            </div>
           </div>
         </div>
         <div id="project4" class="project-container">
@@ -194,7 +194,7 @@
               <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
               &nbsp; &nbsp;
               <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-          </div>
+            </div>
           </div>
         </div>
       </section>
@@ -203,22 +203,20 @@
         <hr class="divider">
         <p>Get in touch if you're interested in working with me!</p>
         <div class="contact-links">
-          <a href="#" target="_blank" class="btn contact-details"
-            ><i class="fa-brands fa-slack"></i> <br>Slack</a>
-          <a
-            href="https://github.com/youngy247"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fa-brands fa-github"></i> <br>GitHub</a>
-          <a href="https://www.linkedin.com/in/adam-young-684319203/" target="_blank" class="btn contact-details"
-            ><i class="fa-brands fa-linkedin"></i> <br>LinkedIn</a
-          >
-          <a
-            href="mailto:fakemail@gmail.com"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fa-brands fa-at">
-            </i> </br>Email
+          <a href="#" target="_blank" class="btn contact-details">
+            <i class="fa-brands fa-slack"></i> 
+            <br>Slack</a>
+          <a href="https://github.com/youngy247" target="_blank" class="btn contact-details">
+            <i class="fa-brands fa-github"></i> 
+            <br>GitHub
+          </a>
+          <a href="https://www.linkedin.com/in/adam-young-684319203/" target="_blank" class="btn contact-details">
+            <i class="fa-brands fa-linkedin"></i> 
+            <br>LinkedIn
+          </a>
+          <a href="mailto:fakemail@gmail.com" target="_blank" class="btn contact-details">
+            <i class="fa-brands fa-at"></i> 
+          </br>Email
           </a>
         </div>
       </section>
