added '-' for grad-pic file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p>In my free time while working as a transport planner I started to teach myself using free resources online such as freeCodeCamp. I was really enjoying it but I could not see a solid career path and how to move forward to get a foothold in the industry.</p>
           </div>
           <div class="about-img-container">
-          <img src="images/grad pic.jpeg" alt="about image 1 here"/>
+          <img src="images/grad-pic.jpeg" alt="about image 1 here"/>
         </div>
         </div>
         <div class="about-container">
