changed 'br' tag on line 293 for '/' to follow 'br'

--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
     <link rel="icon" href="images/favicon.png" sizes="192x192" />
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="apple-touch-icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
       <nav class="navbar">
         <a href="#welcome">
-        <div id="profile-picture-container">
-          <div>
-            <img id="profile-picture" src="images/profilepicture.jpg" alt="Adam Young"/>
+          <div id="profile-picture-container">
+            <div>
+              <img
+                id="profile-picture"
+                src="images/profilepicture.jpg"
+                alt="Adam Young"
+              />
             </div>
-            <p id="profile-name">
-            Adam Young
-            </p>
+            <p id="profile-name">Adam Young</p>
           </div>
         </a>
         <ul class="links-container">
@@ -33,48 +41,69 @@
         </ul>
       </nav>
     </header>
-      <section id="welcome">
-        <div class="hero-image">
-          <div class="hero-text">
-            <h1>Hey! I'm Adam 👋</h1>
-            <p><em>An Aspiring Web Developer</em></p>
-          </div>
+    <section id="welcome">
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1>Hey! I'm Adam 👋</h1>
+          <p><em>An Aspiring Web Developer</em></p>
         </div>
-      </section>
-      <section id="about">
-        <h2>My Journey</h2>
-        <hr class="divider">
-        <div class="about-container">
-          <div class="about-content">
+      </div>
+    </section>
+    <section id="about">
+      <h2>My Journey</h2>
+      <hr class="divider" />
+      <div class="about-container">
+        <div class="about-content">
           <h3>Introduction</h3>
           <p>
-            Hi! My name's Adam and I'm 21 years old. I have keen interests in rugby, gaming and more recently web development. I graduated from Cardiff Metropolitan University in the summer of 2022 and while in the penultimate term of my final year my curiosity for coding and how the web works sprung to life.
+            Hi! My name's Adam and I'm 21 years old. I have keen interests in
+            rugby, gaming and more recently web development. I graduated from
+            Cardiff Metropolitan University in the summer of 2022 and while in
+            the penultimate term of my final year my curiosity for coding and
+            how the web works sprung to life.
           </p>
-          <p>In my free time while working as a transport planner I started to teach myself using free resources online such as freeCodeCamp. I was really enjoying it but I could not see a solid career path and how to move forward to get a foothold in the industry.</p>
-          </div>
-          <div class="about-img-container">
-          <img src="images/grad-pic.jpeg" alt="about image 1 here"/>
-        </div>
-        </div>
-        <div class="about-container">
-          <div class="about-content">
-            <h3>Developer Journey</h3>
-            <p>The Bootcamp route kept coming up in recommendations to me and after facing another brick wall of 'tutorial hell' I dropped everything and took the leap.</p>
-            <p>
-            Following my successful application I made on onto IO Academy's Full Stack Track. Not knowing where it may take me but planning to enjoy the journey and keep my head down for the full 16 weeks of the course.
+          <p>
+            In my free time while working as a transport planner I started to
+            teach myself using free resources online such as freeCodeCamp. I was
+            really enjoying it but I could not see a solid career path and how
+            to move forward to get a foothold in the industry.
           </p>
-          </div>
-          <div class="about-img-container">
+        </div>
+        <div class="about-img-container">
+          <img src="images/grad-pic.jpeg" alt="about image 1 here" />
+        </div>
+      </div>
+      <div class="about-container">
+        <div class="about-content">
+          <h3>Developer Journey</h3>
+          <p>
+            The Bootcamp route kept coming up in recommendations to me and after
+            facing another brick wall of 'tutorial hell' I dropped everything
+            and took the leap.
+          </p>
+          <p>
+            Following my successful application I made on onto IO Academy's Full
+            Stack Track. Not knowing where it may take me but planning to enjoy
+            the journey and keep my head down for the full 16 weeks of the
+            course.
+          </p>
+        </div>
+        <div class="about-img-container">
           <img src="images/free-code-camp.png" alt="about image 2 here" />
-          </div>
         </div>
-      </section>
-      <section id="projects">
-        <h2>Portfolio</h2>
-        <hr class="divider">
-        <h3>Here you can see my portfol<span><img id="io-icon" src="images/favicon.png" alt="IO Academy Logo"></span> of projects I have worked on:</h3>
-        <div id="project1" class="project-container">
-          <div class="project-content2">
+      </div>
+    </section>
+    <section id="projects">
+      <h2>Portfolio</h2>
+      <hr class="divider" />
+      <h3>
+        Here you can see my portfol<span
+          ><img id="io-icon" src="images/favicon.png" alt="IO Academy Logo"
+        /></span>
+        of projects I have worked on:
+      </h3>
+      <div id="project1" class="project-container">
+        <div class="project-content2">
           <h4>Project 1</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
@@ -88,23 +117,31 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
-          </div>
-          <div class="project-img-container project-right">
-            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 1" />
-            <div class="project-icon-container">
-              <i class="fa-brands fa-html5 project-icon fa-lg"></i>
-              <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-php fa-lg"></i>
-             </div> 
-            <div class="button-container">
-              <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
-              &nbsp; &nbsp;
-              <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-            </div>
-            </div>
         </div>
-        <div id="project2" class="project-container">
-          <div class="project-content1">
+        <div class="project-img-container project-right">
+          <img
+            class="project-img"
+            src="images/pexels-pixabay-270360.jpg"
+            alt="project 1"
+          />
+          <div class="project-icon-container">
+            <i class="fa-brands fa-html5 project-icon fa-lg"></i>
+            <i class="fa-brands fa-css3 project-icon fa-lg"></i>
+            <i class="fa-brands fa-php fa-lg"></i>
+          </div>
+          <div class="button-container">
+            <a href="#" target="_blank"
+              >Github <i class="fa-brands fa-square-github"></i
+            ></a>
+            &nbsp; &nbsp;
+            <a href="https://github.com/youngy247" target="_blank"
+              >Live <i class="fa-solid fa-desktop"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+      <div id="project2" class="project-container">
+        <div class="project-content1">
           <h4>Project 2</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -117,24 +154,32 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
+        </div>
+        <div class="project-img-container">
+          <img
+            class="project-img"
+            src="images/pexels-pixabay-270360.jpg"
+            alt="project 2"
+          />
+          <div class="project-icon-container">
+            <i class="fa-brands fa-html5 project-icon fa-lg"></i>
+            <i class="fa-brands fa-css3 project-icon fa-lg"></i>
+            <i class="fa-brands fa-square-js fa-lg"></i>
+            <i class="fa-brands fa-php fa-lg"></i>
           </div>
-          <div class="project-img-container">
-            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 2" />
-            <div class="project-icon-container">
-              <i class="fa-brands fa-html5 project-icon fa-lg"></i>
-              <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-square-js fa-lg"></i>
-              <i class="fa-brands fa-php fa-lg"></i>
-            </div>
-            <div class="button-container">
-              <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
-              &nbsp; &nbsp;
-              <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-            </div>
+          <div class="button-container">
+            <a href="#" target="_blank"
+              >Github <i class="fa-brands fa-square-github"></i
+            ></a>
+            &nbsp; &nbsp;
+            <a href="https://github.com/youngy247" target="_blank"
+              >Live <i class="fa-solid fa-desktop"></i
+            ></a>
           </div>
         </div>
-        <div id="project3" class="project-container">
-          <div class="project-content2">
+      </div>
+      <div id="project3" class="project-container">
+        <div class="project-content2">
           <h4>Project 3</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
@@ -149,24 +194,32 @@
             consectetur unde dicta voluptatibus a ipsum?
           </p>
         </div>
-          <div class="project-img-container project-right">
-            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 3" />
-            <div class="project-icon-container">
-              <i class="fa-brands fa-html5 project-icon fa-lg"></i>
-              <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-js fa-lg"></i>
-              <i class="fa-brands fa-bootstrap fa-lg"></i>
-              <i class="fa-brands fa-mdb fa-lg"></i>
-            </div> 
-            <div class="button-container">
-            <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
+        <div class="project-img-container project-right">
+          <img
+            class="project-img"
+            src="images/pexels-pixabay-270360.jpg"
+            alt="project 3"
+          />
+          <div class="project-icon-container">
+            <i class="fa-brands fa-html5 project-icon fa-lg"></i>
+            <i class="fa-brands fa-css3 project-icon fa-lg"></i>
+            <i class="fa-brands fa-js fa-lg"></i>
+            <i class="fa-brands fa-bootstrap fa-lg"></i>
+            <i class="fa-brands fa-mdb fa-lg"></i>
+          </div>
+          <div class="button-container">
+            <a href="#" target="_blank"
+              >Github <i class="fa-brands fa-square-github"></i
+            ></a>
             &nbsp; &nbsp;
-            <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-            </div>
+            <a href="https://github.com/youngy247" target="_blank"
+              >Live <i class="fa-solid fa-desktop"></i
+            ></a>
           </div>
         </div>
-        <div id="project4" class="project-container">
-          <div class="project-content1">
+      </div>
+      <div id="project4" class="project-container">
+        <div class="project-content1">
           <h4>Project 4</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos maxime
@@ -180,46 +233,67 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
+        </div>
+        <div class="project-img-container">
+          <img
+            class="project-img"
+            src="images/pexels-pixabay-270360.jpg"
+            alt="project 4"
+          />
+          <div class="project-icon-container">
+            <i class="fa-brands fa-html5 project-icon fa-lg"></i>
+            <i class="fa-brands fa-css3 project-icon fa-lg"></i>
+            <i class="fa-brands fa-js fa-lg"></i>
+            <i class="fa-brands fa-react fa-lg"></i>
+            <i class="fa-brands fa-node-js fa-lg"></i>
           </div>
-          <div class="project-img-container">
-            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 4" />
-            <div class="project-icon-container">
-              <i class="fa-brands fa-html5 project-icon fa-lg"></i>
-              <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-js fa-lg"></i>
-              <i class="fa-brands fa-react fa-lg"></i>
-              <i class="fa-brands fa-node-js fa-lg"></i>
-            </div>
-            <div class="button-container">
-              <a href="#" target="_blank">Github <i class="fa-brands fa-square-github"></i></a>
-              &nbsp; &nbsp;
-              <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
-            </div>
+          <div class="button-container">
+            <a href="#" target="_blank"
+              >Github <i class="fa-brands fa-square-github"></i
+            ></a>
+            &nbsp; &nbsp;
+            <a href="https://github.com/youngy247" target="_blank"
+              >Live <i class="fa-solid fa-desktop"></i
+            ></a>
           </div>
         </div>
-      </section>
-      <section id="contact">
-        <h2>Contact</h2>
-        <hr class="divider">
-        <p>Get in touch if you're interested in working with me!</p>
-        <div class="contact-links">
-          <a href="#" target="_blank" class="btn contact-details">
-            <i class="fa-brands fa-slack"></i> 
-            <br>Slack</a>
-          <a href="https://github.com/youngy247" target="_blank" class="btn contact-details">
-            <i class="fa-brands fa-github"></i> 
-            <br>GitHub
-          </a>
-          <a href="https://www.linkedin.com/in/adam-young-684319203/" target="_blank" class="btn contact-details">
-            <i class="fa-brands fa-linkedin"></i> 
-            <br>LinkedIn
-          </a>
-          <a href="mailto:fakemail@gmail.com" target="_blank" class="btn contact-details">
-            <i class="fa-brands fa-at"></i> 
-          </br>Email
-          </a>
-        </div>
-      </section>
-      <footer>&copy; Copyright 2023. Made by <strong>Adam Young</strong></footer>
-    </body>
-</html> 
+      </div>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <hr class="divider" />
+      <p>Get in touch if you're interested in working with me!</p>
+      <div class="contact-links">
+        <a href="#" target="_blank" class="btn contact-details">
+          <i class="fa-brands fa-slack"></i>
+          <br />Slack</a
+        >
+        <a
+          href="https://github.com/youngy247"
+          target="_blank"
+          class="btn contact-details"
+        >
+          <i class="fa-brands fa-github"></i>
+          <br />GitHub
+        </a>
+        <a
+          href="https://www.linkedin.com/in/adam-young-684319203/"
+          target="_blank"
+          class="btn contact-details"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+          <br />LinkedIn
+        </a>
+        <a
+          href="mailto:fakemail@gmail.com"
+          target="_blank"
+          class="btn contact-details"
+        >
+          <i class="fa-brands fa-at"></i>
+          <br />Email
+        </a>
+      </div>
+    </section>
+    <footer>&copy; Copyright 2023. Made by <strong>Adam Young</strong></footer>
+  </body>
+</html>
