removed prettier spacing

--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
     <link rel="icon" href="images/favicon.png" sizes="192x192" />
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="apple-touch-icon" href="images/favicon.png" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
   </head>
   <body>
     <header>
@@ -24,11 +18,7 @@
         <a href="#welcome">
           <div id="profile-picture-container">
             <div>
-              <img
-                id="profile-picture"
-                src="images/profilepicture.jpg"
-                alt="Adam Young"
-              />
+              <img id="profile-picture" src="images/profilepicture.jpg" alt="Adam Young"/>
             </div>
             <p id="profile-name">Adam Young</p>
           </div>
@@ -45,7 +35,9 @@
       <div class="hero-image">
         <div class="hero-text">
           <h1>Hey! I'm Adam 👋</h1>
-          <p><em>An Aspiring Web Developer</em></p>
+          <p>
+            <em>An Aspiring Web Developer</em>
+          </p>
         </div>
       </div>
     </section>
@@ -96,12 +88,8 @@
     <section id="projects">
       <h2>Portfolio</h2>
       <hr class="divider" />
-      <h3>
-        Here you can see my portfol<span
-          ><img id="io-icon" src="images/favicon.png" alt="IO Academy Logo"
-        /></span>
-        of projects I have worked on:
-      </h3>
+      <h3>Here you can see my portfol<span><img id="io-icon" src="images/favicon.png" alt="IO Academy Logo"/></span>
+        of projects I have worked on:</h3>
       <div id="project1" class="project-container">
         <div class="project-content2">
           <h4>Project 1</h4>
@@ -119,24 +107,18 @@
           </p>
         </div>
         <div class="project-img-container project-right">
-          <img
-            class="project-img"
-            src="images/pexels-pixabay-270360.jpg"
-            alt="project 1"
-          />
+          <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 1"/>
           <div class="project-icon-container">
             <i class="fa-brands fa-html5 project-icon fa-lg"></i>
             <i class="fa-brands fa-css3 project-icon fa-lg"></i>
             <i class="fa-brands fa-php fa-lg"></i>
           </div>
           <div class="button-container">
-            <a href="#" target="_blank"
-              >Github <i class="fa-brands fa-square-github"></i
-            ></a>
+            <a href="#" target="_blank">Github 
+              <i class="fa-brands fa-square-github"></i>
+            </a>
             &nbsp; &nbsp;
-            <a href="https://github.com/youngy247" target="_blank"
-              >Live <i class="fa-solid fa-desktop"></i
-            ></a>
+            <a href="https://github.com/youngy247" target="_blank">Live <i class="fa-solid fa-desktop"></i></a>
           </div>
         </div>
       </div>
@@ -156,11 +138,7 @@
           </p>
         </div>
         <div class="project-img-container">
-          <img
-            class="project-img"
-            src="images/pexels-pixabay-270360.jpg"
-            alt="project 2"
-          />
+          <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 2"/>
           <div class="project-icon-container">
             <i class="fa-brands fa-html5 project-icon fa-lg"></i>
             <i class="fa-brands fa-css3 project-icon fa-lg"></i>
@@ -168,13 +146,13 @@
             <i class="fa-brands fa-php fa-lg"></i>
           </div>
           <div class="button-container">
-            <a href="#" target="_blank"
-              >Github <i class="fa-brands fa-square-github"></i
-            ></a>
+            <a href="#" target="_blank">Github 
+              <i class="fa-brands fa-square-github"></i>
+            </a>
             &nbsp; &nbsp;
-            <a href="https://github.com/youngy247" target="_blank"
-              >Live <i class="fa-solid fa-desktop"></i
-            ></a>
+            <a href="https://github.com/youngy247" target="_blank">Live 
+              <i class="fa-solid fa-desktop"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -195,11 +173,7 @@
           </p>
         </div>
         <div class="project-img-container project-right">
-          <img
-            class="project-img"
-            src="images/pexels-pixabay-270360.jpg"
-            alt="project 3"
-          />
+          <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 3"/>
           <div class="project-icon-container">
             <i class="fa-brands fa-html5 project-icon fa-lg"></i>
             <i class="fa-brands fa-css3 project-icon fa-lg"></i>
@@ -208,13 +182,13 @@
             <i class="fa-brands fa-mdb fa-lg"></i>
           </div>
           <div class="button-container">
-            <a href="#" target="_blank"
-              >Github <i class="fa-brands fa-square-github"></i
-            ></a>
+            <a href="#" target="_blank">Github 
+              <i class="fa-brands fa-square-github"></i>
+            </a>
             &nbsp; &nbsp;
-            <a href="https://github.com/youngy247" target="_blank"
-              >Live <i class="fa-solid fa-desktop"></i
-            ></a>
+            <a href="https://github.com/youngy247" target="_blank">Live 
+              <i class="fa-solid fa-desktop"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -235,11 +209,7 @@
           </p>
         </div>
         <div class="project-img-container">
-          <img
-            class="project-img"
-            src="images/pexels-pixabay-270360.jpg"
-            alt="project 4"
-          />
+          <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 4"/>
           <div class="project-icon-container">
             <i class="fa-brands fa-html5 project-icon fa-lg"></i>
             <i class="fa-brands fa-css3 project-icon fa-lg"></i>
@@ -248,13 +218,13 @@
             <i class="fa-brands fa-node-js fa-lg"></i>
           </div>
           <div class="button-container">
-            <a href="#" target="_blank"
-              >Github <i class="fa-brands fa-square-github"></i
-            ></a>
+            <a href="#" target="_blank">Github 
+              <i class="fa-brands fa-square-github"></i>
+            </a>
             &nbsp; &nbsp;
-            <a href="https://github.com/youngy247" target="_blank"
-              >Live <i class="fa-solid fa-desktop"></i
-            ></a>
+            <a href="https://github.com/youngy247" target="_blank">Live 
+              <i class="fa-solid fa-desktop"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -265,32 +235,19 @@
       <p>Get in touch if you're interested in working with me!</p>
       <div class="contact-links">
         <a href="#" target="_blank" class="btn contact-details">
-          <i class="fa-brands fa-slack"></i>
-          <br />Slack</a
-        >
-        <a
-          href="https://github.com/youngy247"
-          target="_blank"
-          class="btn contact-details"
-        >
-          <i class="fa-brands fa-github"></i>
-          <br />GitHub
+          <i class="fa-brands fa-slack"></i> 
+          <br>Slack</a>
+        <a href="https://github.com/youngy247" target="_blank" class="btn contact-details">
+          <i class="fa-brands fa-github"></i> 
+          <br>GitHub
         </a>
-        <a
-          href="https://www.linkedin.com/in/adam-young-684319203/"
-          target="_blank"
-          class="btn contact-details"
-        >
-          <i class="fa-brands fa-linkedin"></i>
-          <br />LinkedIn
+        <a href="https://www.linkedin.com/in/adam-young-684319203/" target="_blank" class="btn contact-details">
+          <i class="fa-brands fa-linkedin"></i> 
+          <br>LinkedIn
         </a>
-        <a
-          href="mailto:fakemail@gmail.com"
-          target="_blank"
-          class="btn contact-details"
-        >
-          <i class="fa-brands fa-at"></i>
-          <br />Email
+        <a href="mailto:fakemail@gmail.com" target="_blank" class="btn contact-details">
+          <i class="fa-brands fa-at"></i> 
+        </br>Email
         </a>
       </div>
     </section>
