refactored html spacing

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </a>
         <a href="mailto:fakemail@gmail.com" target="_blank" class="btn contact-details">
           <i class="fa-brands fa-at"></i> 
-        </br>Email
+          <br>Email
         </a>
       </div>
     </section>
