spelling corrections in about section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p>
             Hi! My name's Adam and I'm 21 years old. I have keen interests in
             rugby, gaming and more recently web development. I graduated from
-            Cardiff Metropolitan University in the summer of 2022 and while in
+            Cardiff Metropolitan University in the summer of 2022 and whilst in
             the penultimate term of my final year my curiosity for coding and
             how the web works sprung to life.
           </p>
@@ -74,7 +74,7 @@
             and took the leap.
           </p>
           <p>
-            Following my successful application I made on onto IO Academy's Full
+            Following my successful application I made it onto IO Academy's Full
             Stack Track. Not knowing where it may take me but planning to enjoy
             the journey and keep my head down for the full 16 weeks of the
             course.
